--- a/views/home.haml
+++ b/views/home.haml
@@ -1,4 +1,2 @@
 .intro
-  %p My name is Joe Roberts. I am A passionate Internet technologist with an expert eye for emerging technologies and their strategic application to the real-world.
-  %p Highly skilled in software development, architecture, infrastructure and robust development process.
-  %p A dedicated sailing dinghy and yacht racer, mountain biker and adventure-sports enthusiast.
+  %p My name is Joe Roberts. I am A passionate Internet technologist with an expert eye for emerging technologies and their strategic application to the real-world. I am highly skilled in software development, architecture, infrastructure and robust development process. I am a dedicated sailing dinghy and yacht racer, mountain biker and adventure-sports enthusiast.
