--- a/views/z.scss
+++ b/views/z.scss
@@ -2,4 +2,11 @@ body {
   font-family: 'Podkova', serif;
   color: #fff;
   background: #000;
+  font-size: 16px;
+  margin:0 40px;
+}
+
+.intro {
+  text-align: center;
+  margin: 8px 0 0 0;
 }
