removed unwanted quotes from title

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -11,7 +11,7 @@
 
 %head
   %meta{ charset: "utf-8" }
-  %title "Joe Roberts aka Zefer"
+  %title Joe Roberts aka Zefer
   %meta{ description: "" }
   %meta{ author: "Joe Roberts" }
   %meta{ name: "robots", content: "index,follow" }
