--- a/views/home.haml
+++ b/views/home.haml
@@ -1,2 +1,16 @@
 .intro
   %p My name is Joe Roberts. I am A passionate Internet technologist with an expert eye for emerging technologies and their strategic application to the real-world. I am highly skilled in software development, architecture, infrastructure and robust development process. I am a dedicated sailing dinghy and yacht racer, mountain biker and adventure-sports enthusiast.
+
+%ul.links
+  %li
+    %a{ href: "http://twitter.com/zefer", title: "Twitter" }
+      %img{ src: "/twitter.png" }
+  %li
+    %a{ href: "http://www.last.fm/user/zeefm", title: "Last.fm" }
+      %img{ src: "/lastfm.png" }
+  %li
+    %a{ href: "http://uk.linkedin.com/in/joewroberts", title: "Linkedin" }
+      %img{ src: "/linkedin.png" }
+  %li
+    %a{ href: "http://zefer.posterous.com", title: "Blog" }
+      %img{ src: "/rss.png" }
