no longer centred, crazy idea

--- a/views/z.scss
+++ b/views/z.scss
@@ -35,8 +35,11 @@ body {
 }
 
 .intro {
-  text-align: center;
-  margin: 8px 0 0 0;
+  margin: 8px 0;
+}
+
+.links {
+  margin: 0 auto;
 }
 
 .links li {
