--- a/views/z.scss
+++ b/views/z.scss
@@ -26,6 +26,15 @@
 /* Styles
 ========= */
 
+p { margin: 0 0 12px 0; }
+em { font-style: italic; }
+strong { font-weight: bold; }
+small { font-size: 80%; }
+
+hr { border: solid #ddd; border-width: 1px 0 0; clear: both; margin: 10px 0 30px; height: 0; }
+
+h1 { font-size: 46px; line-height: 50px; margin-bottom: 14px;}
+
 body {
   font-family: 'Podkova', serif;
   color: #fff;
