added github link (need a better icon though !)

--- a/views/home.haml
+++ b/views/home.haml
@@ -10,6 +10,9 @@
     %a{ href: "http://twitter.com/zefer", title: "Twitter" }
       %img{ src: "/twitter.png" }
   %li
+    %a{ href: "https://github.com/zefer", title: "Github" }
+      %img{ src: "/google.png" }
+  %li
     %a{ href: "http://www.last.fm/user/zeefm", title: "Last.fm" }
       %img{ src: "/lastfm.png" }
   %li
