corrected linkedin url

--- a/views/home.haml
+++ b/views/home.haml
@@ -16,7 +16,7 @@
     %a{ href: "http://www.last.fm/user/zeefm", title: "Last.fm" }
       %img{ src: "/lastfm.png" }
   %li
-    %a{ href: "http://uk.linkedin.com/in/joewroberts", title: "Linkedin" }
+    %a{ href: "http://uk.linkedin.com/in/zefer", title: "Linkedin" }
       %img{ src: "/linkedin.png" }
   %li
     %a{ href: "http://zefer.posterous.com", title: "Blog" }
