A new look: font, big text, some colour and a minor change to copy.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -22,7 +22,7 @@
   %meta{ name: "viewport", content: "width=device-width, initial-scale=1, maximum-scale=1" }
 	
   %link{ rel: "stylesheet", href: "z.css"}
-  %link{ rel: "stylesheet", href: "http://fonts.googleapis.com/css?family=Podkova" }
+  %link{ rel: "stylesheet", href: "http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" }
 	
   %link{ rel: "shortcut icon", href: "/favicon.png" }
 
