--- a/views/home.haml
+++ b/views/home.haml
@@ -1,9 +1,15 @@
 %h1 Joe Roberts
 
 .intro
-  %p A passionate Internet technologist with an expert eye for emerging technologies and their strategic application to the real-world.
-  %p Highly skilled in software development, architecture, infrastructure and robust development process.
-  %p A dedicated sailing dinghy and yacht racer, mountain biker and adventure-sports enthusiast.
+  %p
+    A passionate Internet technologist with an expert eye for emerging technologies and their strategic application to the real-world.
+  %p
+    Highly skilled in software development, infrastructure and robust development process.
+  %p
+    A dedicated sailing dinghy and yacht racer, mountain biker and adventure-sports enthusiast.
+  %p
+    Building image sharing and printing services at
+    %a{ href: "http://about.magnoliabox.com/", title: "Magnolia Box" } Magnolia Box
 
 %ul.links
   %li
