remove social icons in favour of styled text

--- a/views/home.haml
+++ b/views/home.haml
@@ -13,17 +13,12 @@
 
 %ul.links
   %li
-    %a{ href: "http://twitter.com/zefer", title: "Twitter" }
-      %img{ src: "/twitter.png" }
+    %a{ href: "http://twitter.com/zefer", title: "Twitter" } Twitter
   %li
-    %a{ href: "https://github.com/zefer", title: "Github" }
-      %img{ src: "/google.png" }
+    %a{ href: "https://github.com/zefer", title: "Github" } Github
   %li
-    %a{ href: "http://www.last.fm/user/zeefm", title: "Last.fm" }
-      %img{ src: "/lastfm.png" }
+    %a{ href: "http://www.last.fm/user/zeefm", title: "Last.fm" } Last.fm
   %li
-    %a{ href: "http://uk.linkedin.com/in/zefer", title: "Linkedin" }
-      %img{ src: "/linkedin.png" }
-  %li
-    %a{ href: "http://zefer.posterous.com", title: "Blog" }
-      %img{ src: "/rss.png" }
+    %a{ href: "http://uk.linkedin.com/in/zefer", title: "Linkedin" } Linkedin
+  %li.last
+    %a{ href: "http://zefer.posterous.com", title: "Blog" } Blog
