--- a/views/home.haml
+++ b/views/home.haml
@@ -2,12 +2,13 @@
 
 .intro
   %p
-    A passionate Internet technologist with an expert eye for emerging technologies and their strategic application to the real-world.
+    A passionate full stack developer with an expert eye for emerging technologies and their strategic application to the real-world.
   %p
     Highly skilled in software development, infrastructure and robust development process.
   %p
     A dedicated sailing dinghy and yacht racer, mountain biker and adventure-sports enthusiast.
   %p
+    CTO <a href="http://hydra.io/" title="Hydra.io">Hydra.io</a>.
     Building image sharing and printing services at
     %a{ href: "http://about.magnoliabox.com/", title: "Magnolia Box" } Magnolia Box
 
